--- a/PaintPlusPlus/mainwindow.ui
+++ b/PaintPlusPlus/mainwindow.ui
@@ -63,8 +63,8 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>82</width>
-      <height>167</height>
+      <width>91</width>
+      <height>242</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
@@ -78,6 +78,23 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="1">
+      <widget class="QPushButton" name="Color_button">
+       <property name="text">
+        <string>Color</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Grosor:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="1">
       <widget class="QPushButton" name="pencilButton">
        <property name="enabled">
@@ -88,14 +105,7 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QPushButton" name="Color_button">
-       <property name="text">
-        <string>Color</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
+     <item row="7" column="1">
       <widget class="QLabel" name="mouseLocationLabel">
        <property name="text">
         <string>0, 0</string>
@@ -105,7 +115,7 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="5" column="1">
       <widget class="QSpinBox" name="spinBox">
        <property name="minimum">
         <number>2</number>
@@ -118,13 +128,10 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="label">
+     <item row="2" column="1">
+      <widget class="QPushButton" name="squareButton">
        <property name="text">
-        <string>Grosor:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
+        <string>Cuadrado</string>
        </property>
       </widget>
      </item>
@@ -134,7 +141,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>220</y>
+      <y>260</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -163,7 +170,7 @@
      <x>0</x>
      <y>0</y>
      <width>932</width>
-     <height>22</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuArchivo">
