--- a/PaintPlusPlus/mainwindow.ui
+++ b/PaintPlusPlus/mainwindow.ui
@@ -64,37 +64,10 @@
       <x>10</x>
       <y>10</y>
       <width>91</width>
-      <height>242</height>
+      <height>280</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="0" column="1">
-      <widget class="QPushButton" name="penButton">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <property name="text">
-        <string>Pen</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QPushButton" name="Color_button">
-       <property name="text">
-        <string>Color</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Grosor:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="QPushButton" name="pencilButton">
        <property name="enabled">
@@ -105,7 +78,31 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="2" column="1">
+      <widget class="QPushButton" name="squareButton">
+       <property name="text">
+        <string>Cuadrado</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QPushButton" name="Color_button">
+       <property name="text">
+        <string>Color</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="penButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Pen</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
       <widget class="QLabel" name="mouseLocationLabel">
        <property name="text">
         <string>0, 0</string>
@@ -116,6 +113,16 @@
       </widget>
      </item>
      <item row="5" column="1">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Grosor:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
       <widget class="QSpinBox" name="spinBox">
        <property name="minimum">
         <number>2</number>
@@ -128,10 +135,10 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QPushButton" name="squareButton">
+     <item row="3" column="1">
+      <widget class="QPushButton" name="circle_Button">
        <property name="text">
-        <string>Cuadrado</string>
+        <string>Círculo</string>
        </property>
       </widget>
      </item>
@@ -140,8 +147,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>260</y>
+      <x>20</x>
+      <y>520</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -154,7 +161,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>360</y>
+      <y>560</y>
       <width>89</width>
       <height>31</height>
      </rect>
