--- a/PaintPlusPlus/mainwindow.ui
+++ b/PaintPlusPlus/mainwindow.ui
@@ -189,8 +189,8 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>540</y>
+      <x>110</x>
+      <y>580</y>
       <width>89</width>
       <height>31</height>
      </rect>
@@ -231,8 +231,8 @@
    <widget class="QPushButton" name="undoButton">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>470</y>
+      <x>10</x>
+      <y>430</y>
       <width>51</width>
       <height>31</height>
      </rect>
@@ -244,14 +244,66 @@
    <widget class="QPushButton" name="redolistButton">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>470</y>
+      <x>70</x>
+      <y>430</y>
       <width>41</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Redo</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="GrisesButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>480</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Grises</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="negativoButton">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>480</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Negativo</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>480</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Sepia</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pastelButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>520</y>
+      <width>89</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Pastel</string>
     </property>
    </widget>
   </widget>
@@ -288,8 +340,16 @@
     </widget>
     <addaction name="menuRotar"/>
    </widget>
+   <widget class="QMenu" name="menuFiltros">
+    <property name="title">
+     <string>Filtros</string>
+    </property>
+    <addaction name="actionEscala_de_Grisis"/>
+    <addaction name="actionNegativo"/>
+   </widget>
    <addaction name="menuArchivo"/>
    <addaction name="menuImagen"/>
+   <addaction name="menuFiltros"/>
   </widget>
   <widget class="QToolBar" name="toolBar">
    <property name="windowTitle">
@@ -335,6 +395,16 @@
   <action name="actionFlip_horizontal">
    <property name="text">
     <string>Flip horizontal</string>
+   </property>
+  </action>
+  <action name="actionEscala_de_Grisis">
+   <property name="text">
+    <string>Escala de Grises</string>
+   </property>
+  </action>
+  <action name="actionNegativo">
+   <property name="text">
+    <string>Negativo</string>
    </property>
   </action>
  </widget>
